--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,13 @@ services:
       - role=container
     environment:
       - DB_ENGINE=mysql
-      - DB_NAME=booking
-      - DB_USERNAME=root
-      - DB_PASSWORD=book123@
-      - DB_HOST=10.18.111.68
-      - DB_PORT=3306
+      - MYSQL_DATABASE=booking
+      - MYSQL_USERNAME=root
+      - MYSQL_PASSWORD=book123@
+      - MYSQL_ADDRESS=10.18.111.68:3306
+      - MYSQL_USERNAME=
+      - MYSQL_PASSWORD=
+      - MYSQL_ADDRESS=
 networks:
   default:
     external:
