--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,9 @@ services:
     environment:
       - DB_ENGINE=mysql
       - MYSQL_DATABASE=booking
-      - MYSQL_USERNAME=root
+      - MYSQL_USERNAME=booking
       - MYSQL_PASSWORD=book123@
-      - MYSQL_ADDRESS=10.18.111.68:3306
+      - MYSQL_ADDRESS=10.21.111.42:3306
       - MYSQL_USERNAME=
       - MYSQL_PASSWORD=
       - MYSQL_ADDRESS=
